--- a/.github/workflows/patch.yml
+++ b/.github/workflows/patch.yml
@@ -96,6 +96,8 @@ jobs:
         env:
           DB: mariadb
           TYPE: server
+          FRAPPE_USER: blaggacao
+          FRAPPE_BRANCH: feat/utm-analytics
 
       - name: Run Patch Tests
         run: |
@@ -107,7 +109,7 @@ jobs:
           wget https://erpnext.com/files/v13-erpnext.sql.gz
           bench --site test_site --force restore ~/frappe-bench/v13-erpnext.sql.gz
 
-          git -C "apps/frappe" remote set-url upstream https://github.com/frappe/frappe.git
+          git -C "apps/frappe" remote set-url upstream https://github.com/blaggacao/frappe.git
           git -C "apps/erpnext" remote set-url upstream https://github.com/frappe/erpnext.git
 
 
@@ -137,7 +139,7 @@ jobs:
           update_to_version 15
 
           echo "Updating to latest version"
-          git -C "apps/frappe" checkout -q -f "${GITHUB_BASE_REF:-${GITHUB_REF##*/}}"
+          git -C "apps/frappe" checkout -q -f "feat/utm-analytics"
           git -C "apps/erpnext" checkout -q -f "$GITHUB_SHA"
 
           pgrep honcho | xargs kill
